# microkit

./: .gitignore  Cargo.toml  build_sdk.py  builder  dev_build.py  notes.txt  receiver.s  simulate
docs/: manual.md
example/benchmarks/: Makefile  benchmark.h  benchmarks.system  config.h  manager.c  ppc_interference.c  ppc_local_client.c  ppc_local_server.c  ppc_low_to_hi__high.c  ppc_low_to_hi__low.c  ppc_remote_client.c  ppc_remote_server.c  process.py
example/multikernel/: capdl_json_0  capdl_json_1
example/pd_dyn/: Makefile  client.c  package.S  pd_dyn.system  protocon.c  template.c  trampoline.c  x86_64_ioport.c
example/pd_dyn/extelf/: Makefile  elfutils.c
example/pd_dyn/trustedloader/: Makefile  trustedloader.c
example/qemu_virt_aarch64/pd_templates/: Makefile  client.c  container-monitor.c  container.c  ed25519_private_key.pem  elf_utils.c  elf_utils.h  frontend.c  generate_ed25519_keys.py  hello.c  package_programs.S  patch_elf.py  pd_templates.system  private_key.pem  proto-container.c  public_key.pem  receiver.c  receiver2.c  receiver_loader.c  sender.c  sender_loader.c  test.c  trampoline.c  trusted-loading.md  trusted_loader.c  trusted_loader_pre.c  tweetnacl.c  utils.c  utils.h
example/qemu_virt_aarch64/pong/: Makefile  pong.system  receiver.c  sender.c
libmicrokit/: Makefile
libmicrokit/include/: microkit.h
libmicrokit/src/: main.c  tsld.c
monitor/: monitor.ld
monitor/src/: main.c
tool/microkit/src/: elf.rs  lib.rs  loader.rs  main.rs  sdf.rs  sel4.rs  shadowpt.rs  symbols.rs  sysxml.rs  trustedlo.rs
(+25 files in other folders)
