#
# Copyright 2025, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]
resolver = "3"
members = [
    "tool/microkit",
    "initialiser",
]

[workspace.dependencies.sel4-capdl-initializer]
git = "https://github.com/au-ts/rust-seL4"
branch = "multikernel"

[workspace.dependencies.sel4-capdl-initializer-types]
git = "https://github.com/au-ts/rust-seL4"
branch = "multikernel"
[profile.release.package.microkit-tool]
strip = true

[patch."https://github.com/au-ts/rust-seL4"]
sel4-capdl-initializer = { path = "../rust-seL4/crates/sel4-capdl-initializer" }
sel4-capdl-initializer-types = { path = "../rust-seL4/crates/sel4-capdl-initializer/types" }